--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cybersource-rest-client",
-  "version": "0.0.43",
+  "name": "@builtbyelement/cybersource-rest-client",
+  "version": "0.0.43-fork",
   "description": "Node.js SDK for the CyberSource REST API",
   "author": "developer@cybersource.com",
   "license": "CyberSource",
@@ -18,6 +18,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "jwt-simple": "^0.5.1",
+    "jwk-to-pem": "^2.0.5",
     "memory-cache": "^0.2.0",
     "node-forge": ">=1.0.0",
     "promise": "^8.0.1",
@@ -30,7 +31,6 @@
   "devDependencies": {
     "@sinonjs/formatio": "3.0.0",
     "expect.js": "~0.3.1",
-    "jwk-to-pem": "^2.0.5",
     "mocha": "^5.2.0",
     "mocha-sonarqube-reporter": "^1.0.1",
     "nyc": "^12.0.2",
